--- a/IxLambdaBackendFrameworkE2ETests/build.gradle
+++ b/IxLambdaBackendFrameworkE2ETests/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'idea'
+    id 'io.franzbecker.gradle-lombok' version '3.1.0'
 }
 
 group 'IxLambdaAPIFrameworkTests'
@@ -9,8 +11,21 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs '/personal-workspace/DeclarativeAPILib/IxLambdaBackendFramework/build/libs'
+    }
 }
 
+
 dependencies {
+    compile (
+            'IxLambdaBackend:IxLambdaBackend:1.0',
+            'com.amazonaws:aws-lambda-java-core:1.2.0',
+            'com.amazonaws:aws-lambda-java-events:1.2.0',
+            'com.amazonaws:aws-java-sdk-athena:1.11.405',
+    )
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile "org.mockito:mockito-core:1.+"
 }
