--- a/IxLambdaBackendFramework/build.gradle
+++ b/IxLambdaBackendFramework/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'idea'
-    id "io.freefair.lombok" version "3.6.4"
     id 'jacoco'
 }
 
@@ -23,6 +22,9 @@ dependencies {
     )
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
+    compileOnly('org.projectlombok:lombok:1.18.8')
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
     
     testCompile "org.mockito:mockito-core:1.+"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
