--- a/IxLambdaBackendFrameworkE2ETests/build.gradle
+++ b/IxLambdaBackendFrameworkE2ETests/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'io.franzbecker.gradle-lombok' version '3.1.0'
 }
 
 group 'IxLambdaAPIFrameworkTests'
@@ -28,4 +27,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testCompile "org.mockito:mockito-core:1.+"
+
+    compileOnly('org.projectlombok:lombok:1.18.8')
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
