Optimize build and update jar task

--- a/IxLambdaAPIFramework/build.gradle
+++ b/IxLambdaAPIFramework/build.gradle
@@ -11,18 +11,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs '/personal-workspace/IxLambdaBackendFramework/IxLambdaStorageLib/build/libs'
-    }
 }
 
 dependencies {
     compile (
             'com.auth0:java-jwt:3.4.0',
-            'IxLambdaBackendFramework:IxLambdaStorageLib:1.0',
             'com.amazonaws:aws-lambda-java-core:1.2.0',
             'com.amazonaws:aws-lambda-java-events:1.2.0',
-            'com.amazonaws:aws-java-sdk-athena:1.11.405',
             'org.reflections:reflections:0.9.11'
     )
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
@@ -51,11 +46,9 @@ jacocoTestCoverageVerification {
     }
 }
 
-task buildZip(type: Zip) {
-    from compileJava
-    from processResources
-    into('lib') {
-        from configurations.runtime
+jar {
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
@@ -63,4 +56,4 @@ test {
     useJUnitPlatform()
 }
 
-build.dependsOn jacocoTestCoverageVerification
+build.dependsOn jacocoTestCoverageVerification, jar
